refactor: refactorización de clase InventoryService